# kwai-op-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: .CMakeLists.txt.swp  .gemv_bench.cc.swp  CMakeLists.txt  allreduce_bench.cc  gemv_bench.cc
csrc/: CMakeLists.txt
csrc/ops/gemv/: CMakeLists.txt  gemv_hipblaslt.cc  gemv_rocblas.cc  gemv_traits.h  hipblaslt_traits.h  rocblas_traits.h
csrc/utils/: .data_generator.cc.swp  CMakeLists.txt  data_generator.cc  data_generator.h  data_verification.cc  data_verification.h  device_mem_utils.cc  device_mem_utils.h  device_utils.h
